initial commit, get it minimaly working

--- a/src/main/assets/www/common/cobalt.conf
+++ b/src/main/assets/www/common/cobalt.conf
@@ -20,7 +20,7 @@
                         "name": "home",
                         "title": "Team builder",
                         "icon" : "fa fa-home",
-                        "color" : "#FF69B4",
+                        "color" : "#FFF",
                         "iosPosition": "topLeft",
                         "androidPosition": "top"
                     },
@@ -28,7 +28,7 @@
                         "name": "team_list",
                         "title": "Team list",
                         "icon" : "fa fa-users",
-                        "color" : "#FF69B4",
+                        "color" : "#FFF",
                         "iosPosition": "topRight",
                         "androidPosition": "top"
                     },
@@ -36,7 +36,7 @@
                          "name": "team_add",
                          "title": "Add a mate",
                          "icon" : "fa fa-plus",
-                         "color" : "#FF69B4",
+                         "color" : "#FFF",
                          "iosPosition": "topRight",
                          "androidPosition": "top"
                      }
