--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ gen-external-apklibs
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+.idea
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
