move all bars to coblat.conf

--- a/app/src/main/assets/www/common/cobalt.conf
+++ b/app/src/main/assets/www/common/cobalt.conf
@@ -23,7 +23,26 @@
                         "color" : "#FFF",
                         "iosPosition": "topRight",
                         "androidPosition": "top"
-                    },
+                    }
+                ]
+            }
+        },
+        "team_list": {
+            "ios": "ViewController",
+            "android": ".activities.MainActivity",
+            "pullToRefresh": true,
+            "bars":{
+                "visible": {
+                    "top" : true
+                },
+                "title" : "Team List",
+                "backgroundColor": "#FF4444",
+                "color": "FFF",
+                "visible" : {
+                    "top": true,
+                    "bottom": false
+                },
+                "actions": [
                      {
                          "name": "team_add",
                          "title": "Add a mate",
@@ -33,6 +52,72 @@
                          "androidPosition": "top"
                      }
 
+                ]
+            }
+        },
+        "team_add": {
+            "ios": "ViewController",
+            "android": ".activities.MainActivity",
+            "pullToRefresh": true,
+            "bars":{
+                "visible": {
+                    "top" : true
+                },
+                "title" : "Add a team member",
+                "backgroundColor": "#FF4444",
+                "color": "FFF",
+                "visible" : {
+                    "top": true,
+                    "bottom": false
+                },
+                "actions": [
+                     {
+                        "name": "add",
+                        "icon" : "fa fa-check",
+                        "title" : "Add",
+                        "backgroundColor": "#FF4444",
+                        "color": "FFF",
+                        "iosPosition": "topRight",
+                        "androidPosition": "top"
+                    }
+
+                ]
+            }
+        },
+        "team_edit": {
+            "ios": "ViewController",
+            "android": ".activities.MainActivity",
+            "pullToRefresh": true,
+            "bars":{
+                "visible": {
+                    "top" : true
+                },
+                "title" : "Rename or delete",
+                "backgroundColor": "#FF4444",
+                "color": "FFF",
+                "visible" : {
+                    "top": true,
+                    "bottom": false
+                },
+                "actions": [
+                    {
+                        "name": "delete",
+                        "icon" : "fa fa-trash",
+                        "title" : "Remove",
+                        "backgroundColor": "#FF4444",
+                        "color": "FFF",
+                        "iosPosition": "topRight",
+                        "androidPosition": "top"
+                    },
+                    {
+                        "name": "rename",
+                        "icon" : "fa fa-check",
+                        "title" : "Rename",
+                        "backgroundColor": "#FF4444",
+                        "color": "FFF",
+                        "iosPosition": "topRight",
+                        "androidPosition": "top"
+                    },
                 ]
             }
         }
