test with sidemenu

--- a/app/src/main/assets/www/common/cobalt.conf
+++ b/app/src/main/assets/www/common/cobalt.conf
@@ -1,35 +1,28 @@
 {
     "controllers": {
+        "menu": {
+            "android":      ".activities.DefaultActivity",
+            "ios":          "MenuViewController"
+        },
         "default": {
-            "ios": "ViewController",
-            "android": ".activities.MainActivity",
-            "pullToRefresh": true,
+            "ios": "RootViewController",
+            "android": ".activities.WithSidemenuActivity",
             "bars":{
                 "visible": {
                     "top" : true
                 },
-                "title" : "Team Builder",
+                "title" : "Team Tool Box",
                 "backgroundColor": "#FF4444",
                 "color": "FFF",
                 "visible" : {
                     "top": true,
                     "bottom": false
-                },
-                "actions": [
-                    {
-                        "name": "team_list",
-                        "title": "Team list",
-                        "icon" : "fa fa-users",
-                        "color" : "#FFF",
-                        "iosPosition": "topRight",
-                        "androidPosition": "top"
-                    }
-                ]
+                }
             }
         },
         "team_list": {
             "ios": "ViewController",
-            "android": ".activities.MainActivity",
+            "android": ".activities.WithSidemenuActivity",
             "pullToRefresh": true,
             "bars":{
                 "visible": {
@@ -38,10 +31,6 @@
                 "title" : "Team List",
                 "backgroundColor": "#FF4444",
                 "color": "FFF",
-                "visible" : {
-                    "top": true,
-                    "bottom": false
-                },
                 "actions": [
                      {
                          "name": "team_add",
@@ -57,8 +46,7 @@
         },
         "team_add": {
             "ios": "ViewController",
-            "android": ".activities.MainActivity",
-            "pullToRefresh": true,
+            "android": ".activities.DefaultActivity",
             "bars":{
                 "visible": {
                     "top" : true
@@ -66,10 +54,6 @@
                 "title" : "Add a team member",
                 "backgroundColor": "#FF4444",
                 "color": "FFF",
-                "visible" : {
-                    "top": true,
-                    "bottom": false
-                },
                 "actions": [
                      {
                         "name": "add",
@@ -86,8 +70,7 @@
         },
         "team_edit": {
             "ios": "ViewController",
-            "android": ".activities.MainActivity",
-            "pullToRefresh": true,
+            "android": ".activities.DefaultActivity",
             "bars":{
                 "visible": {
                     "top" : true
@@ -95,10 +78,6 @@
                 "title" : "Rename or delete",
                 "backgroundColor": "#FF4444",
                 "color": "FFF",
-                "visible" : {
-                    "top": true,
-                    "bottom": false
-                },
                 "actions": [
                     {
                         "name": "delete",
